Modifique algunas animaciones, gradientes y transiciones, y agregue media query tablet

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
     <h2 class="H2">Abogada U.N.C. Magister en Derecho Procesal. Instructora en Juzgado Penal de Control.</h2>
 
     <!-- Enlaces de Navegacion-->
+    <!-- Animacion-->
     <nav>
-        <section class="enlacesdeNavegacion">
+        <section class="enlacesdeNavegacion animate__animated animate__fadeIn">
             <!-- Enlaces relativos-->
             <a href="index.html">Inicio</a>
             <a href="trabajosRealizados.html">Trabajos realizados</a>
