--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link del Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Link del CSS-->
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <title>Aplicando Grid</title>
+    <title>Bootstrap</title>
     <!-- Icono Web-->
     <link rel="shorcut icon" href="multimedia/favicon.png">
-
 </head>
 
 
@@ -21,23 +23,28 @@
     <!-- Animacion-->
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" alt="logojusticia" height="150" width="250" />
-        <h1 class="H1 animate__animated animate__bounce">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.png" alt="logopoderjudicial" height="150" width="250" />
+        <img src="multimedia/logojusticia.webp" alt="logojusticia" height="150" width="150" margin="50px" />
+        <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
+        <img src="multimedia/logopoderjudicial.jpg" alt="logopoderjudicial" height="120" width="120" />
     </section>
 
     <h2 class="H2">Abogada U.N.C. Magister en Derecho Procesal. Instructora en Juzgado Penal de Control.</h2>
 
+    
     <!-- Enlaces de Navegacion-->
-    <!-- Animacion-->
+    <!-- Navbar con form-->
     <nav>
-        <section class="enlacesdeNavegacion animate__animated animate__fadeIn">
+        <section class="enlacesdeNavegacion navbar navbar-expand-lg navbar-light bg-light">
             <!-- Enlaces relativos-->
             <a href="index.html">Inicio</a>
             <a href="trabajosRealizados.html">Trabajos realizados</a>
             <a href="tesisdeMaestria.html">Tesis de Maestria</a>
             <a href="referenciasLaborales.html">Referencias laborales</a>
             <a href="trabajosenProceso.html">Trabajos en proceso</a>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
         </section>
 
     </nav>
@@ -45,7 +52,7 @@
     <!-- Descripcion del perfil profesional-->
     <section class="descripcionPerfil">
 
-        <img id="fotoPerfil" src="multimedia/fotoperfil.jpg" alt="fotoPerfil">
+        <img id="fotoPerfil" src="multimedia/fotoperfil.JPG" alt="fotoPerfil" height="300" width="300">
         <p class="parrafo1">
             <em> Abogada y magister en derecho procesal con una solida formacion academica y extensa trayectoria en el
                 fuero de niñez, violencia familiar y de genero en el Poder Judicial de la Provincia de Córdoba , y una
@@ -72,7 +79,10 @@
         </section>
 
         <section class="seccionesDescriptivas">
-            <h3 class="H3"> Desafios en marcha </h3>
+            <h3 class="H3"> Desafios en marcha </h3 >
+                <div class="spinner-border text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
             <p class="parrafos2"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos illo nobis nulla
                 asperiores dolor architecto vero nemo aspernatur rerum? Iusto incidunt eum fuga sit ullam. Est officiis
                 veritatis laboriosam! Aspernatur!</p>
@@ -148,6 +158,14 @@
     <!-- Pie de pagina-->
     <footer class="footer">Todos los derechos reservados - Maria Lucila Cabutto.</footer>
 
+    <!-- Scripts de bootstrap-->
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+        </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+        </script>
 
 </body>
 
