--- a/referenciasLaborales.html
+++ b/referenciasLaborales.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Link del CSS-->
     <link rel="stylesheet" href="style.css">
     <title>referenciasLaborales</title>
@@ -17,11 +20,12 @@
 
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" alt="logo justicia" height="150" width="250" />
+        <img src="multimedia/logojusticia.webp" alt="logojusticia" height="150" width="150" />
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.png" alt="logo poder judicial" height="150" width="250" />
+        <img src="multimedia/logopoderjudicial.jpg" alt="logopoderjudicial" height="120" width="120" />
     </section>
 
+    <!-- Navbar con form-->
     <nav>
         <section class="enlacesdeNavegacion">
             <a href="index.html">Inicio</a>
@@ -29,6 +33,10 @@
             <a href="tesisdeMaestria.html">Tesis de Maestria</a>
             <a href="referenciasLaborales.html">Referencias laborales</a>
             <a href="trabajosenProceso.html">Trabajos en proceso</a>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
         </section>
 
     </nav>
@@ -47,11 +55,52 @@
                 <option value="8">Peter Johnson - Juez de Primera Instancia (0351) 156789677</option>
             </select>
         </div>
-        
+
     </form>
+
+    <ul class="listaContactosActuales">
+        <li class="list-group-item disabled" aria-disabled="true">Contactos laborales del trabajo actual</li>
+        <li class="list-group-item">Fredddy Mercury - Juez de Primera Instancia (0351) 156879087</li>
+        <li class="list-group-item">Bob Dylan - Secretario de Primera Instancia (0351) 156789677</li>
+        <li class="list-group-item">Paul Mccarey - Prosecretario de Primera Instancia (0351) 156879087</li>
+      </ul>
+
+
+    <!-- Carrousel Slides only-->
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="multimedia/imagen 1.jpg" class="d-block w-100" alt="imagen1">
+            </div>
+            <div class="carousel-item">
+                <img src="multimedia/imagen 2.jpg" class="d-block w-100" alt="imagen2">
+            </div>
+            <div class="carousel-item">
+                <img src="multimedia/imagen 6.jpg" class="d-block w-100" alt="imagen6">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 
     <footer class="footer">Todos los derechos reservados - Maria Lucila Cabutto.</footer>
 
+<!-- Scripts de bootstrap-->
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+</script>
 
 
 </body>
