--- a/tesisdeMaestria.html
+++ b/tesisdeMaestria.html
@@ -5,22 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link del Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Link del CSS-->
     <link rel="stylesheet" href="style.css">
     <title>tesisdeMaestria</title>
     <link rel="shorcut icon" href="multimedia/favicon.png">
 </head>
 
-
-
 <body class="fondoWeb">
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" alt="logo justicia" height="150" width="250" />
+        <img src="multimedia/logojusticia.webp" alt="logojusticia" height="150" width="150" />
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.png" alt="logo poder judicial" height="150" width="250" />
+        <img src="multimedia/logopoderjudicial.jpg" alt="logopoderjudicial" height="120" width="120" />
     </section>
 
+    <!-- Navbar con form-->
     <nav>
         <section class="enlacesdeNavegacion">
             <a href="index.html">Inicio</a>
@@ -28,32 +31,32 @@
             <a href="tesisdeMaestria.html">Tesis de Maestria</a>
             <a href="referenciasLaborales.html">Referencias laborales</a>
             <a href="trabajosenProceso.html">Trabajos en proceso</a>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
         </section>
-
     </nav>
 
     <section>
         <h2 class="H2"> Tesis de maestria </h2>
 
-        <p class="parrafos2"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat voluptate nesciunt consectetur a ab. Qui
+        <p class="parrafos2"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat voluptate nesciunt
+            consectetur a ab. Qui
             amet
             vel accusantium ex consequuntur autem natus veniam repellendus dolorem molestias laboriosam harum, magni
             error.
         </p>
     </section>
-
-    <form class="descargaTesis">
-
-        <input type="button" value="Descargar tesis en PDF" />
-    </form>
-
+    
+    <div class="btn-group container d-flex justify-content-center" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-primary">Descargar tesis completa (PDF)</button>
+        <button type="button" class="btn btn-primary">Obtener resumen de Tesis (PDF)</button>
+        <button type="button" class="btn btn-primary">Link de publicación</button>
+    </div>
 
     <footer class="footer">Todos los derechos reservados - Maria Lucila Cabutto.</footer>
 
-
 </body>
-
-
-
 
 </html>
