--- a/trabajosenProceso.html
+++ b/trabajosenProceso.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link del Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Link del CSS-->
     <link rel="stylesheet" href="style.css">
     <title>trabajosenProceso</title>
@@ -17,11 +21,13 @@
 <body class="fondoWeb">
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" alt="logo justicia" height="150" width="250" />
+        <img src="multimedia/logojusticia.webp" alt="logojusticia" height="150" width="150" />
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.png" alt="logo poder judicial" height="150" width="250" />
+        <img src="multimedia/logopoderjudicial.jpg" alt="logopoderjudicial" height="120" width="120" />
     </section>
 
+
+    <!-- Navbar con form-->
     <nav>
         <section class="enlacesdeNavegacion">
             <a href="index.html">Inicio</a>
@@ -29,6 +35,10 @@
             <a href="tesisdeMaestria.html">Tesis de Maestria</a>
             <a href="referenciasLaborales.html">Referencias laborales</a>
             <a href="trabajosenProceso.html">Trabajos en proceso</a>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
         </section>
 
     </nav>
@@ -37,22 +47,27 @@
         <h2 class="H2"> Trabajos y cursos en proceso </h2>
 
         <ul class="listaTrabajosenProceso">
-            <li>Violencia de genero en America Latina</li>
-            <li>Proceso de adopcion en la Ciudad de Cordoba</li>
-            <li>Control de legalidad de Medidas Excepcionales</li>
-            <li>Delitos economicos en Cordoba</li>
-            <li>Delitos de guates blancos</li>
-
+            <li class="list-group-item">Violencia de genero en America Latina</li>
+            <li class="list-group-item list-group-item-primary">Proceso de adopcion en la Ciudad de Cordoba</li>
+            <li class="list-group-item list-group-item-secondary">Control de legalidad de Medidas Excepcionales</li>
+            <li class="list-group-item list-group-item-success">Delitos economicos en Cordoba</li>
+            <li class="list-group-item list-group-item-danger">Delitos de guantes blancos</li>
+            <li class="list-group-item list-group-item-warning">Delitos contra la seguridad públuca</li>
+            <li class="list-group-item list-group-item-info">Delitos contra la libertad</li>
+            <li class="list-group-item list-group-item-light">Delitos contra el honor</li>
+            <li class="list-group-item list-group-item-dark">Delitos contra la Integridad Sexual</li>
         </ul>
 
     </section>
 
+
+
     <section class="contactoform">
-        <p > Podes contactarme en las redes para conocer mas sobre mi:</p>
+        <p> Podes contactarme en las redes para conocer mas sobre mi:</p>
 
         <img src="multimedia/redes.png" alt="logoredes" width="400" height="200" />
 
-        <p > o escribirme por aqui:</p>
+        <p> o escribirme por aqui:</p>
 
         <form>
             <input>
