agregado de index

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <!-- Animacion-->
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.webp" alt="logojusticia" height="150" width="150" margin="50px" />
+        <img src="multimedia/logojusticia.webp" class="img-fluid" alt="logojusticia" height="150" width="150"/>
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.jpg" alt="logopoderjudicial" height="120" width="120" />
+        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150"/>
     </section>
 
     <h2 class="H2">Abogada U.N.C. Magister en Derecho Procesal. Instructora en Juzgado Penal de Control.</h2>
