--- a/trabajosRealizados.html
+++ b/trabajosRealizados.html
@@ -10,7 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Link del CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>trabajosRealizados</title>
     <link rel="shorcut icon" href="multimedia/favicon.png">
 </head>
@@ -20,7 +20,7 @@
 <body class="fondoWeb">
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.webp" alt="logojusticia" height="150" width="150" />
+        <img src="multimedia/logojusticia.webp" alt="logojusticia" height="120" width="120" />
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
         <img src="multimedia/logopoderjudicial.jpg" alt="logopoderjudicial" height="120" width="120" />
     </section>
