segunda entrega de proyecto final

--- a/trabajosRealizados.html
+++ b/trabajosRealizados.html
@@ -20,7 +20,7 @@
 <body class="fondoWeb">
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.webp" alt="logojusticia" height="120" width="120" />
+        <img src="multimedia/logojusticia.png" alt="logojusticia" height="120" width="120" />
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
         <img src="multimedia/logopoderjudicial.jpg" alt="logopoderjudicial" height="120" width="120" />
     </section>
