--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Animacion-->
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.webp" class="img-fluid" alt="logojusticia" height="150" width="150"/>
+        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150"/>
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
         <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150"/>
     </section>
