--- a/referenciasLaborales.html
+++ b/referenciasLaborales.html
@@ -22,7 +22,7 @@
     <section class="encabezado">
         <img src="multimedia/logojusticia.webp" alt="logojusticia" height="150" width="150" />
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.jpg" alt="logopoderjudicial" height="120" width="120" />
+        <img src="multimedia/logojusticia.png" alt="logopoderjudicial" height="120" width="120" />
     </section>
 
     <!-- Navbar con form-->
