unificado de css, segunda entregar del proyecto final con correcciones

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Link del CSS-->
-    <link rel="stylesheet" href="style.css">
-    <title>Bootstrap</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Segunda entrega de proyecto final</title>
     <!-- Icono Web-->
     <link rel="shorcut icon" href="multimedia/favicon.png">
 </head>
@@ -23,9 +23,10 @@
     <!-- Animacion-->
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150"/>
+        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150" />
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150"/>
+        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150"
+            width="150" />
     </section>
 
     <h2 class="H2">Abogada U.N.C. Magister en Derecho Procesal. Instructora en Juzgado Penal de Control.</h2>
@@ -79,12 +80,12 @@
 
         <section class="seccionesDescriptivas">
             <h3 class="H3"> Desafios en marcha </h3>
-            <div class="spinner-border text-primary" role="status">
-                <span class="visually-hidden">Loading...</span>
-            </div>
             <p class="parrafos2"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos illo nobis nulla
                 asperiores dolor architecto vero nemo aspernatur rerum? Iusto incidunt eum fuga sit ullam. Est officiis
                 veritatis laboriosam! Aspernatur!</p>
+            <div class="spinner-border text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
         </section>
 
     </div>
