--- a/referenciasLaborales.html
+++ b/referenciasLaborales.html
@@ -9,7 +9,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Link del CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>referenciasLaborales</title>
     <link rel="shorcut icon" href="multimedia/favicon.png">
 </head>
@@ -20,9 +20,9 @@
 
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.webp" alt="logojusticia" height="150" width="150" />
+        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150"/>
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logojusticia.png" alt="logopoderjudicial" height="120" width="120" />
+        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150"/>
     </section>
 
     <!-- Navbar con form-->
@@ -59,7 +59,7 @@
     </form>
 
     <ul class="listaContactosActuales">
-        <li class="list-group-item disabled" aria-disabled="true">Contactos laborales del trabajo actual</li>
+        <li class="list-group-item disabled" aria-disabled="true"> Contactos laborales del trabajo actual:</li>
         <li class="list-group-item">Fredddy Mercury - Juez de Primera Instancia (0351) 156879087</li>
         <li class="list-group-item">Bob Dylan - Secretario de Primera Instancia (0351) 156789677</li>
         <li class="list-group-item">Paul Mccarey - Prosecretario de Primera Instancia (0351) 156879087</li>
