--- a/trabajosRealizados.html
+++ b/trabajosRealizados.html
@@ -20,9 +20,9 @@
 <body class="fondoWeb">
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" alt="logojusticia" height="120" width="120" />
+        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150"/>
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.jpg" alt="logopoderjudicial" height="120" width="120" />
+        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150"/>
     </section>
 
 
