agegado de scss, mixin, export, list y map

--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@
     <!-- Animacion-->
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150" />
+        <img src="multimedia/logojusticia.png" class="img-fluid logo" alt="logojusticia"/>
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150"
-            width="150" />
+        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid logo" alt="logopoderjudicial"/>
     </section>
 
     <h2 class="H2">Abogada U.N.C. Magister en Derecho Procesal. Instructora en Juzgado Penal de Control.</h2>
@@ -52,7 +51,7 @@
     <!-- Descripcion del perfil profesional-->
     <section class="descripcionPerfil">
 
-        <img id="fotoPerfil" src="multimedia/fotoperfil.JPG" alt="fotoPerfil" height="300" width="300">
+        <img class="fotoPerfil" src="multimedia/fotoperfil.JPG" alt="fotoPerfil">
         <p class="parrafo1">
             <em> Abogada y magister en derecho procesal con una solida formacion academica y extensa trayectoria en el
                 fuero de niñez, violencia familiar y de genero en el Poder Judicial de la Provincia de Córdoba , y una
