--- a/trabajosRealizados.html
+++ b/trabajosRealizados.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Link del CSS-->
     <link rel="stylesheet" href="css/style.css">
-    <title>trabajosRealizados</title>
+    <title>Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal</title>
     <link rel="shorcut icon" href="multimedia/favicon.png">
 </head>
 
@@ -20,9 +20,9 @@
 <body class="fondoWeb">
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150"/>
+        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150"/>
+        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
     </section>
 
 
