--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Link del CSS-->
     <link rel="stylesheet" href="css/style.css">
-    <title>Segunda entrega de proyecto final</title>
+    <title>Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal</title>
     <!-- Icono Web-->
     <link rel="shorcut icon" href="multimedia/favicon.png">
 </head>
@@ -23,9 +23,9 @@
     <!-- Animacion-->
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" class="img-fluid logo" alt="logojusticia"/>
+        <img src="multimedia/logojusticia.png" class="img-fluid logo" alt="logojusticia" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid logo" alt="logopoderjudicial"/>
+        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid logo" alt="logopoderjudicial" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
     </section>
 
     <h2 class="H2">Abogada U.N.C. Magister en Derecho Procesal. Instructora en Juzgado Penal de Control.</h2>
@@ -51,7 +51,7 @@
     <!-- Descripcion del perfil profesional-->
     <section class="descripcionPerfil">
 
-        <img class="fotoPerfil" src="multimedia/fotoperfil.JPG" alt="fotoPerfil">
+        <img class="fotoPerfil" src="multimedia/fotoperfil.JPG" alt="fotoPerfil" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         <p class="parrafo1">
             <em> Abogada y magister en derecho procesal con una solida formacion academica y extensa trayectoria en el
                 fuero de niñez, violencia familiar y de genero en el Poder Judicial de la Provincia de Córdoba , y una
@@ -92,22 +92,22 @@
     <!-- Aplicando Grids-->
     <section class="gallery-container">
         <div class="gallery-item">
-            <img src="multimedia/imagen 1.jpg" alt="imagen1" height="150" width="250">
+            <img src="multimedia/imagen 1.jpg" alt="mazoJusticia" height="150" width="250" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         </div>
         <div class="gallery-item">
-            <img src="multimedia/imagen 2.jpg" alt="imagen2" height="150" width="250">
+            <img src="multimedia/imagen 2.jpg" alt="debateJuridico" height="150" width="250" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         </div>
         <div class="gallery-item">
-            <img src="multimedia/imagen 3.jpg" alt="imagen3" height="150" width="250">
+            <img src="multimedia/imagen 3.jpg" alt="palacioCordoba" height="150" width="250" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         </div>
         <div class="gallery-item">
-            <img src="multimedia/imagen 4.jpg" alt="imagen4" height="150" width="250">
+            <img src="multimedia/imagen 4.jpg" alt="barandillaTribunales" height="150" width="250" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         </div>
         <div class="gallery-item">
-            <img src="multimedia/imagen 5.jpg" alt="imagen5" height="150" width="250">
+            <img src="multimedia/imagen 5.jpg" alt="TribunalJusticia" height="150" width="250" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         </div>
         <div class="gallery-item">
-            <img src="multimedia/imagen 6.jpg" alt="imagen6" height="150" width="250">
+            <img src="multimedia/imagen 6.jpg" alt="palacioJusticia" height="150" width="250" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         </div>
     </section>
 
@@ -117,21 +117,22 @@
     <!-- Animacion-->
     <div class="contacto">
 
-        <img src="multimedia/logocontacto.png" alt="logo contacto" width="30" height="30" />
+        <img src="multimedia/logocontacto.png" alt="logo contacto" width="30" height="30" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
 
         <p class="parrafo3 animate__animated animate__backInUp"> mail:mlucilacabutto@gmail.com</p>
 
 
-        <img src="multimedia/logomail.jpg" alt="logo mail" width="30" height="30" />
+        <img src="multimedia/logomail.jpg" alt="logo mail" width="30" height="30" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
     </div>
 
+    <iframe src="https://www.youtube.com/embed/IvEOSnuWNCM" title="Poder Judicial | Cordoba | Video Institucional" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <!-- Ubicacion de la profesional-->
     <div class="mapouter">
         <div class="gmap_canvas">
             <iframe width="100" height="100" id="gmap_canvas"
                 src="https://maps.google.com/maps?q=Cordoba&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-                scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                scrolling="no" marginheight="0" marginwidth="0" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"></iframe>
             <a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/"></a>
             <style>
                 .mapouter {
