--- a/referenciasLaborales.html
+++ b/referenciasLaborales.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- Link del CSS-->
     <link rel="stylesheet" href="css/style.css">
-    <title>referenciasLaborales</title>
+    <title>Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal</title>
     <link rel="shorcut icon" href="multimedia/favicon.png">
 </head>
 
@@ -20,9 +20,9 @@
 
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150"/>
+        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150"/>
+        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
     </section>
 
     <!-- Navbar con form-->
@@ -70,13 +70,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="multimedia/imagen 1.jpg" class="d-block w-100" alt="imagen1">
+                <img src="multimedia/imagen 1.jpg" class="d-block w-100" alt="imagen1" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
             </div>
             <div class="carousel-item">
-                <img src="multimedia/imagen 2.jpg" class="d-block w-100" alt="imagen2">
+                <img src="multimedia/imagen 2.jpg" class="d-block w-100" alt="imagen2" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
             </div>
             <div class="carousel-item">
-                <img src="multimedia/imagen 6.jpg" class="d-block w-100" alt="imagen6">
+                <img src="multimedia/imagen 6.jpg" class="d-block w-100" alt="imagen6" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
